--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,9 @@
 {
+  "semi": true,
+  "singleQuote": false,
   "printWidth": 80,
   "tabWidth": 2,
-  "semi": true,
-  "singleQuote": true,
   "trailingComma": "es5",
-  "arrowParens": "avoid",
-  "endOfLine": "lf"
+  "bracketSpacing": true,
+  "arrowParens": "always"
 }
